# module-6-pbagastama

./: pyproject.toml
app/: __init__.py
app/controller/customers/: customer_route.py
app/controller/customers/schema/: create_customer_request.py  update_customer_request.py
app/models/: customer.py
app/repositories/: customer_repo.py
app/route/: customer_route.py
app/service/: customer_service.py
app/utils/: api_response.py
