[tool.poetry]
name = "flask-revou"
version = "0.1.0"
description = ""
authors = ["bagas <bagas@microad.co.id>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
poetry-dotenv-plugin = "^0.2.0"
flask-sqlalchemy = "^3.1.1"
psycopg2 = "^2.9.9"
flask-migrate = "^4.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
